--- a/package.json
+++ b/package.json
@@ -7,7 +7,52 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Skewlock",
+  "license": "ISC",{
+  "name": "bot_discord_test",
+  "version": "1.0.0",
+  "description": "bot discord",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Skewlock",
   "license": "ISC",
+  "dependencies": {
+    "bindings": "^1.3.0",
+    "canvas": "^1.6.10",
+    "colors": "^1.1.2",
+    "cuteapi-module": "0.0.3",
+    "danbooru": "^3.0.7",
+    "discord.js": "^11.3.0",
+    "djs-collection-persistent": "^0.1.4",
+    "enmap": "^0.4.6",
+    "enmap-level": "^1.0.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "forecast": "^0.3.2",
+    "fs-extra": "^4.0.2",
+    "google-translate-api": "^2.3.0",
+    "hentai.js": "^1.3.6",
+    "jimp": "^0.2.28",
+    "kaori": "^1.1.4",
+    "mongodb": "^3.0.3",
+    "mongoose": "^5.0.7",
+    "opusscript": "0.0.4",
+    "prompt": "^1.0.0",
+    "random-puppy": "^1.1.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "riot-games-api-nodejs": "^1.0.7",
+    "rule34": "^1.0.0",
+    "snekfetch": "^3.6.4",
+    "strip-indent": "^2.0.0",
+    "xml2js": "^0.4.19",
+    "youtube-dl": "^1.12.2",
+    "youtube-search": "^1.0.10",
+    "ytdl-core": "git+https://github.com/fent/node-ytdl-core.git"
+  }
+}
+
   "dependencies": {
     "bindings": "^1.3.0",
     "colors": "^1.1.2",
